fix second page on due to body being too big

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    min-height: 100%;
+    min-height: 90%;
 }
 
 .no-above-padding {
